// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectTeaser does not render the description by default 1`] = `
<a
  className="teaser   "
  href="bp.org/p123"
  onClick={[Function]}
  target="_parent"
  title="Skateistan Afghanistan"
>
  <div
    alt="Skateistan Afghanistan"
    className="teaser--profile-picture"
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
  />
  <h2
    className="teaser--title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Skateistan Afghanistan",
      }
    }
  />
  <div
    className="teaser--divider"
  >
    <div
      className="teaser--factlist"
    >
      <div />
      <div>
        <span>
          1.337
        </span>
         
        Spenden
      </div>
      <div>
        <span>
          42 €
        </span>
         
        fehlen noch
      </div>
    </div>
    <img
      alt="Skateistan"
      className="teaser--carrier-logo"
    />
  </div>
  <div
    className="teaser--progress"
  >
    <div
      className="teaser--progress-bar"
      style={
        Object {
          "width": "undefined%",
        }
      }
    />
  </div>
</a>
`;

exports[`ProjectTeaser does render the description if showDescription is true 1`] = `
<a
  className="teaser  teaser--with-description "
  href="bp.org/p123"
  onClick={[Function]}
  target="_parent"
  title="Skateistan Afghanistan"
>
  <div
    alt="Skateistan Afghanistan"
    className="teaser--profile-picture"
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
  />
  <h2
    className="teaser--title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Skateistan Afghanistan",
      }
    }
  />
  <div
    className="teaser--description"
    dangerouslySetInnerHTML={
      Object {
        "__html": "this is amazing",
      }
    }
  />
  <div
    className="teaser--divider"
  >
    <div
      className="teaser--factlist"
    >
      <div />
      <div>
        <span>
          1.337
        </span>
         
        Spenden
      </div>
      <div>
        <span>
          42 €
        </span>
         
        fehlen noch
      </div>
    </div>
    <img
      alt="Skateistan"
      className="teaser--carrier-logo"
    />
  </div>
  <div
    className="teaser--progress"
  >
    <div
      className="teaser--progress-bar"
      style={
        Object {
          "width": "undefined%",
        }
      }
    />
  </div>
</a>
`;

exports[`ProjectTeaser is possible to force the locale 1`] = `
<a
  className="teaser   "
  href="coupons.org/p123"
  onClick={[Function]}
  target="_parent"
  title="Skateistan Afghanistan"
>
  <div
    alt="Skateistan Afghanistan"
    className="teaser--profile-picture"
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
  />
  <h2
    className="teaser--title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Skateistan Afghanistan",
      }
    }
  />
  <div
    className="teaser--divider"
  >
    <div
      className="teaser--factlist"
    >
      <div />
      <div>
        <span>
          1.337
        </span>
         
        Spenden
      </div>
      <div>
        <span>
          42 €
        </span>
         
        fehlen noch
      </div>
    </div>
    <img
      alt="Skateistan"
      className="teaser--carrier-logo"
    />
  </div>
  <div
    className="teaser--progress"
  >
    <div
      className="teaser--progress-bar"
      style={
        Object {
          "width": "undefined%",
        }
      }
    />
  </div>
</a>
`;

exports[`ProjectTeaser renders 1`] = `
<a
  className="teaser   "
  href="bp.org/p123"
  onClick={[Function]}
  target="_parent"
  title="Skateistan Afghanistan"
>
  <div
    alt="Skateistan Afghanistan"
    className="teaser--profile-picture"
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
  />
  <h2
    className="teaser--title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Skateistan Afghanistan",
      }
    }
  />
  <div
    className="teaser--divider"
  >
    <div
      className="teaser--factlist"
    >
      <div />
      <div>
        <span>
          1.337
        </span>
         
        Spenden
      </div>
      <div>
        <span>
          42 €
        </span>
         
        fehlen noch
      </div>
    </div>
    <img
      alt="Skateistan"
      className="teaser--carrier-logo"
    />
  </div>
  <div
    className="teaser--progress"
  >
    <div
      className="teaser--progress-bar"
      style={
        Object {
          "width": "undefined%",
        }
      }
    />
  </div>
</a>
`;

exports[`ProjectTeaser uses a custom href if given 1`] = `
<a
  className="teaser   "
  href="coupons.org/p123"
  onClick={[Function]}
  target="_parent"
  title="Skateistan Afghanistan"
>
  <div
    alt="Skateistan Afghanistan"
    className="teaser--profile-picture"
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
  />
  <h2
    className="teaser--title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Skateistan Afghanistan",
      }
    }
  />
  <div
    className="teaser--divider"
  >
    <div
      className="teaser--factlist"
    >
      <div />
      <div>
        <span>
          1.337
        </span>
         
        Spenden
      </div>
      <div>
        <span>
          42 €
        </span>
         
        fehlen noch
      </div>
    </div>
    <img
      alt="Skateistan"
      className="teaser--carrier-logo"
    />
  </div>
  <div
    className="teaser--progress"
  >
    <div
      className="teaser--progress-bar"
      style={
        Object {
          "width": "undefined%",
        }
      }
    />
  </div>
</a>
`;
